# wikipedia-graph

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md
crates/wikimedia-language-codegen/: Cargo.toml  update_languages.sh
crates/wikimedia-language-codegen/src/: lib.rs  main.rs
crates/wikipedia-egui-graph/: Cargo.toml
crates/wikipedia-egui-graph/src/: builder.rs  lib.rs  ui.rs
crates/wikipedia-graph/: Cargo.toml
crates/wikipedia-graph-native/: Cargo.toml
crates/wikipedia-graph-native/src/: main.rs
crates/wikipedia-graph-web/: Cargo.toml  build_web.sh  host_web.sh  index.html  wikipedia_graph_web.js
crates/wikipedia-graph-web/server/: wikipedia_graph_web.js
crates/wikipedia-graph-web/src/: lib.rs
crates/wikipedia-graph/src/: lib.rs  page.rs  wikimedia_languages.rs
crates/wikipedia-graph/src/client/: client.rs  mod.rs  native.rs
crates/wikipedia-graph/src/graph/: egui_graph.rs  mod.rs  petgraph_graph.rs
crates/wikipedia-graph/tests/: common.rs  graphs.rs  mod.rs  multekrem-page-text
