[workspace]
members = ["crates/wikipedia-egui-graph","crates/wikipedia-graph", "crates/wikipedia-graph-native", "crates/wikipedia-graph-web"]
resolver = "3"

[workspace.package]
version = "0.1.2"
edition = "2024"
license = "MIT OR Unlicense"

[workspace.dependencies]
thiserror = "2.0.16"
petgraph = { version = "0.8.2", default-features = false, features = ["std", "stable_graph"]}
egui_graphs = { version = "0.28.0" }
eframe = "0.32.3"
egui = "0.32.3"
log = "0.4.28"
