[workspace]
members = ["crates/wikimedia-language-codegen","crates/wikipedia-egui-graph","crates/wikipedia-graph", "crates/wikipedia-graph-native", "crates/wikipedia-graph-web"]
resolver = "3"

[workspace.package]
version = "0.1.4"
edition = "2024"
license = "MIT OR Unlicense"

[workspace.dependencies]
thiserror = "2.0"
petgraph = { version = "0.8", default-features = false, features = ["std", "stable_graph"]}
log = "0.4"

# ui
egui_graphs = { version = "0.29" }
eframe = "0.33.2"
egui = "0.33.2"

[workspace.lints.rust]
unsafe_code = "warn"
# unused_crate_dependencies = "warn"

[workspace.lints.clippy]
# Cargo
wildcard_dependencies = "warn"
cargo_common_metadata = "warn"

# Restriction
allow_attributes = "warn"
clone_on_ref_ptr = "warn"
create_dir = "warn"
dbg_macro = "warn"
exit = "warn"
string_to_string = "warn"
undocumented_unsafe_blocks = "warn"
unused_result_ok = "warn"
unused_trait_names = "warn"
unwrap_used = "warn"
print_stderr = "deny"
print_stdout = "deny"

# Nursery
nursery = { level = "warn", priority = -1 }
missing_const_for_fn = "allow"
significant_drop_tightening = "allow"
suboptimal_flops = "allow"
option_if_let_else = "allow"

# Pedantic
pedantic = { level = "warn", priority = 1 }
cast_precision_loss = "allow"
default_trait_access = "allow"
missing_errors_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
struct_excessive_bools = "allow"
map_unwrap_or = "allow"
unnecessary_debug_formatting = "allow"