[package]
name = "wikipedia-graph-native"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
wikipedia-graph = { path = "../wikipedia-graph" }
wikipedia-egui-graph = {path = "../wikipedia-egui-graph"}
eframe = {workspace = true}
egui = {workspace = true}
log = { workspace = true }
pretty_env_logger = "*"


