[package]
name = "wikipedia-graph"
version.workspace = true
edition.workspace = true
license.workspace = true


[dependencies]

# Necessary
url = { version = "2.5" }
isolang = { version = "2.0" }
url_encor = { version = "1.0.3" }
cfg-if = "1.0"
itertools = "0.14.0"
regex = "1.11.2"
thiserror.workspace = true
log.workspace = true

# Graph features
petgraph = {workspace = true, optional = true }
egui_graphs = { workspace = true, optional = true }

# Client features
http = { version = "1.3", optional = true }

[features]
default = ["petgraph", "client"]
petgraph = ["dep:petgraph"]
# Only the dependency, not the feature
egui_graphs = ["dep:egui_graphs", "dep:petgraph"]
client = [
    "dep:http", 
    "dep:ureq", 
    "dep:web-sys", 
    "dep:wasm-bindgen",
    "dep:serde-wasm-bindgen"
]

[target.'cfg(not(all(target_arch = "wasm32", target_os = "unknown")))'.dependencies]
ureq = { version = "3.1", optional = true }

[target.'cfg(all(target_arch = "wasm32", target_os = "unknown"))'.dependencies]
# Set all of these to optional
web-sys = { version = "0.3", features = ['Headers', 'Request', 'RequestInit', 'RequestRedirect', 'RequestMode', 'Response', 'Window'], optional = true }
wasm-bindgen = { version = "0.2", optional = true }
serde-wasm-bindgen = { version = "0.6", optional = true }