[package]
name = "wikipedia-graph"
version.workspace = true
edition.workspace = true
license.workspace = true


[dependencies]
# Necessary
url = { version = "2.5" }
url_encor = { version = "1.0.3" }
web-time = { version = "1.1" }
wasm_thread = { version = "0.3" }
cfg-if = "1.0"
itertools = "0.14.0"
regex = "1.11.2"
lazy-regex = "3.4"
thiserror.workspace = true
log.workspace = true

# Graph features
petgraph = {workspace = true, optional = true }
egui_graphs = { workspace = true, optional = true }

# Client features
http = { version = "1.3", optional = true }
ehttp = { version = "0.5.0", optional = true }

# Serialisation
serde = { version = "1.0", features = ["derive"]}
serde_json = { version = "1.0" }

[dev-dependencies]
pretty_assertions = { version = "1.4" }

[features]
default = ["petgraph", "client"]
graphs = []
petgraph = ["dep:petgraph", "graphs"]
# Only the dependency, not the feature
egui_graphs = ["dep:egui_graphs", "dep:petgraph", "graphs"]
client = [
    "dep:http", 
    "dep:ehttp",    
]